--- a/src/config_model.yaml
+++ b/src/config_model.yaml
@@ -7,6 +7,10 @@ train:
   learning_rate: 0.0005
   l2_weight_decay: 0.0001
   batch_size: 1
-  save_step: 3  # save model every Nth epoch
-  evaluation_step: 10  # run evaluation of model every Nth epoch
-  report_step: 1  # print report from training every Nth iteration
+  save_step: 40  # save model every Nth epoch
+  evaluation_step: 5  # run evaluation of model every Nth epoch
+  report_step: 500  # print report from training every Nth iteration
+
+evaluation:
+  threshold_steps: 10
+  report_step: 99
