--- a/experiments/cs_batch_40.yaml
+++ b/experiments/cs_batch_40.yaml
@@ -2,12 +2,12 @@ model:
   input_size: 75
   hidden_size: 512
   embedding_input_size: 64
-  model_name: ""
+  model_name: "cross_subject-batch_40"
 
 train:
   learning_rate: 0.0005
   l2_weight_decay: 0.0001
-  batch_size: 1
+  batch_size: 40
   save_step: 10  # save model every Nth epoch
   evaluation_step: 5  # run evaluation of model every Nth epoch
   report_step: 500  # print report from training every Nth iteration
