--- a/experiments/cv_batch_1.yaml
+++ b/experiments/cv_batch_1.yaml
@@ -2,7 +2,7 @@ model:
   input_size: 75
   hidden_size: 512
   embedding_input_size: 64
-  model_name: "cross_view-batch_1"
+  model_name: "cross_view-batch_1_lr_0005_rs"
 
 train:
   learning_rate: 0.0005
