--- a/experiments/cv_batch_20.yaml
+++ b/experiments/cv_batch_20.yaml
@@ -2,12 +2,12 @@ model:
   input_size: 75
   hidden_size: 512
   embedding_input_size: 64
-  model_name: "cross_view-batch_40"
+  model_name: "cross_view-batch_20_lr_001_rs"
 
 train:
-  learning_rate: 0.0005
+  learning_rate: 0.001
   l2_weight_decay: 0.0001
-  batch_size: 40
+  batch_size: 20
   save_step: 10  # save model every Nth epoch
   evaluation_step: 5  # run evaluation of model every Nth epoch
   report_step: 20  # print report from training every Nth iteration
